# 2018-Vision

./: .gitignore  2018Vision.cpp  CMakeLists.txt  ColorSelectBox.py  CubeRecog.cpp  CubeRecog.h  CubeRecog.py  CubeRecog1.py  CubeRecog2.py  CubeRecog3.py  CubeRecognition.py  LineOrientation.py  LineRecog.cpp  LineRecog.h  LineRecog1.py  LineRecog2.py  README.md  StreamViewer.cpp  VideoPipe.cpp  camera-settings.sh  camtest.py  imgTest.py  main.cpp  package.xml
Test_Model/: CubeRecog1.py  CubeRecog3.py  LineOrientation.py  LineRecog1.py  LineRecog2.py  camtest.py  scraps.txt  scraps2.py
include/: CubeRecog.h  RemoteCamera.h  Streamer.h
src/: CubeRecog.cpp  CubeRecog.h  LineRecog.cpp  LineRecog.h  PipeWriter.cpp  PipeWriter.h  RemoteCamera.cpp  Streamer.cpp
